# harambe

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  Prebuild.mk  README.md  check.sh  core.py  format.sh  pyproject.toml  schema.json  test.py
.github/workflows/: python.yml
core/: pyproject.toml
core/harambe_core/: __init__.py  errors.py  normalize_url.py  types.py
core/harambe_core/observer/: __init__.py  base.py  json_line_observer.py  json_observer.py  logging_observer.py  memory_observer.py  serialization_observer.py  storage_observer.py  types.py
core/harambe_core/parser/: __init__.py  constants.py  currencies.py  parser.py  schemas.py  type_currency.py  type_date.py  type_email.py  type_enum.py  type_price.py  type_url.py
core/harambe_core/parser/expression/: __init__.py  evaluator.py  functions.py
core/test/: test_normalize_url.py
core/test/observer/: test_json_observer.py  test_serialization_observer.py
core/test/parser/: schemas.py  test_null_values.py  test_parser.py  test_parser_computed.py  test_parser_enums.py  test_parser_price.py  test_parser_updates.py  test_required_fields.py  test_reserved_fields.py  test_type_currency.py  test_type_date.py  test_type_email.py  test_type_enum.py  test_type_number.py  test_type_phone_number.py  test_type_price.py  test_type_string.py  test_type_url.py
core/test/parser/expression/: test_expression.py  test_functions.py
core/test/parser/mock_schemas/: computed_pk.json  contact.json  currency.json  datetime.json  document.json  documents.json  enums.json  government_contracts.json  list_of_lists.json  list_of_objects.json  list_of_strings.json  list_with_nested_types.json  load_schema.py  nested_lists_and_objects.json  object_with_list.json  object_with_list_of_objects.json  object_with_nested_objects.json  object_with_nested_types.json  phone_number.json  reserved_pydantic_fields.json  reserved_python_fields.json  url.json
docs/: README.md
docs/source/: conf.py  index.rst
harambe/: __init__.py  ast_overrides.py  cookies_handler.py  core.py  downloader.py  errors.py  handlers.py  harness.py  meta.py  normalize_url.py  observer.py  pagination.py  proxy.py  test.py  tracker.py  types.py  utils.py
harambe/contrib/: __init__.py  types.py
harambe/contrib/playwright/: __init__.py  harness.py  impl.py
harambe/contrib/soup/: __init__.py  harness.py  impl.py  tracing.py
harambe/parser/: parser.py  schemas.py  type_currency.py  type_date.py  type_email.py  type_enum.py  type_number.py  type_phone_number.py  type_price.py  type_string.py  type_url.py
harambe/parser/expression/: functions.py
sdk/: pyproject.toml
sdk/harambe/: __init__.py  _types.py  cache.py  cookie_utils.py  core.py  handlers.py  instrumentation.py  llm.py  observer.py  pagination.py  settings.py  tracker.py  types.py  user_agent.py  utils.py
sdk/harambe/contrib/: types.py
sdk/harambe/contrib/playwright/: harness.py  impl.py
sdk/harambe/contrib/soup/: __init__.py  harness.py  impl.py
sdk/harambe/html_converter/: __init__.py  html_to_markdown.py  html_to_text.py
sdk/harambe/html_to_text/: __init__.py
sdk/test/: matchers.py  test_cache.py  test_captcha_hit.py  test_core.py  test_e2e.py  test_get_next_stage.py  test_harness.py  test_instrumentation.py  test_matchers.py  test_meta.py  test_observers.py  test_pagination.py  test_proxy.py  test_sdk.py  test_stealth.py
sdk/test/mock_html/: 404.html  download.html  heading.html  meta.html  regulations.html  solicitation.html  table.html
test/: test_ast_overrides.py  test_e2e.py  test_harness.py  test_meta.py  test_normalize_url.py  test_observers.py  test_pagination.py  test_proxy.py  test_sdk.py  test_stealth.py  test_user_agent.py
test/mock_html/: emails.html  narcotics.html  simple_page_with_table.html
test/parser/: schema_with_required_fields.py  test_captcha_hit.py  test_null_values.py  test_parser.py  test_parser_updates.py  test_required_fields.py  test_strip_values.py  test_type_currency.py  test_type_date.py  test_type_email.py  test_type_number.py  test_type_phone_number.py  test_type_price.py  test_type_string.py  test_type_url.py
test/parser/expression/: test_expression.py  test_functions.py
tests/: test_meta.py  test_normalize_url.py  test_observers.py  test_parser.py  test_sdk.py
tests/parser/: schemas.py  test_parser.py  test_parser_updates.py  test_type_date.py  test_type_phone_number.py  test_type_url.py
