[tool.poetry]
name = "harambe-sdk"
version = "0.9.3"
description = "Data extraction SDK for Playwright 🐒🍌"
authors = ["awtkns <hello@awtkns.com>"]
readme = "README.md"
packages = [
    { include = "harambe", from = "." },
]


[tool.poetry.dependencies]
pydantic = { version = "^2.6.4" }
python = "^3.11"
playwright = "^1.39.0"
setuptools = "^69.0.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
playwright-stealth = "^1.0.6" # TODO: self host this package
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "harambe"
exclude = ["tests", "extractors"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
