[tool.poetry]
name = "harambe-sdk"
version = "0.18.31"
description = "Data extraction SDK for Playwright 🐒🍌"
authors = ["awtkns <hello@awtkns.com>"]
readme = "README.md"
packages = [
    { include = "harambe", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
playwright = "^1.45.0"
setuptools = "^70.3.0"
beautifulsoup4 = "^4.12.3"
dateparser = "^1.2.0"
requests = "^2.32.3"
playwright-stealth = "^1.0.6" # TODO: self host this package
aiohttp = "^3.9.5"
email-validator = "^2.2.0"
phonenumbers = "^8.13.40"
curl-cffi = "^0.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"
types-dateparser = "^1.2.0.20240420"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.2"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
files = "harambe"
exclude = ["test", "extractors"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
